--- a/.env
+++ b/.env
@@ -11,4 +11,5 @@ SENDGRID_API_KEY = SG.si5gBUyoSkiAtbrehrdKjQ.BJA-eYz4jIc0TteCJxzFBxwkt7ZQXNNPzXr
 email = adigunhammed.lekan@gmail.com
 NEXMO_API_KEY = b1f4dd8e
 NEXMO_SECRET_KEY = uk1kL8hf69ATDLH4
+PS_KEY = sk_test_62a3f598e66f31f15c321eebf80a510b7365da42
 fcm_client_key = AAAAj8GflHg:APA91bFskT3HwJRQTEHqudAdwujZF8Lxz8w_BHSNPDroQJBI62ITMXXoA-mYuNG-7JGC58-S20sQBitfihExzIbMX8KGxuDg5mgfD3oeyjATKNcU9W-9toqooRH7LI6kwXXW14YJAqzP
